<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hyper Class</string>

    <string name="splash_copyright">©2020 Sony Global Education, Inc.</string>

    <string name="show_password">パスワードを表示</string>
    <string name="login">ログイン</string>
    <string name="id_hint">メールアドレス</string>
    <string name="password_hint">パスワード</string>
    <string name="login_error">IDかパスワードが間違っています</string>

    <string name="home">ホーム</string>
    <string name="course">コース</string>
    <string name="setting">アカウント</string>


    <string name="basic_information">基本情報</string>
    <string name="full_name">氏名</string>
    <string name="id">ID</string>
    <string name="password">パスワード</string>
    <string name="email">メールアドレス</string>
    <string name="logout">ログアウト</string>
    <string name="setting1">設定</string>
    <string name="notification">このデバイスに通知を送る</string>
    <string name="other">その他</string>
    <string name="term">利用規約</string>
    <string name="policy">プライバシーポリシー</string>
    <string name="license">ソフトウェアライセンス</string>

    <string name="review">概要</string>
    <string name="review2">レビュー</string>

    <string name="student_count">受講生 %d</string>
    <string name="teacher_info">%s | %s</string>

    <string name="all">すべて</string>
    <string name="lesson">レッスン</string>
    <string name="data">資料</string>
    <string name="workout">ワークアウト</string>

    <string name="mtrl_picker_range_header_unselected" tools:override="true">開始日～終了日</string>
    <string name="mtrl_picker_range_header_only_end_selected" tools:override="true">開始日～%1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected" tools:override="true">%1$s～終了日</string>
    <string name="picker_range_header_title" tools:override="true">期間を選択してください</string>
    <string name="mtrl_picker_cancel" tools:override="true">キャンセル</string>
    <string name="mtrl_picker_confirm" tools:override="true">OK</string>

    <string name="mtrl_picker_date_header_unselected" tools:override="true">選択した日付</string>
    <string name="mtrl_picker_date_header_title" tools:override="true">日付を選択してください</string>


    <string name="not_proposed">未提出</string>
    <string name="draft">下書き</string>
    <string name="submitted">提出済み</string>
    <string name="reviewed">レビュー済み</string>
    <string name="rejected">再提出</string>
    <string name="pending_verification">確認待ち</string>
    <string name="completion">完了</string>
    <string name="reintroduction">再提出依頼</string>

    <string name="start">スタート</string>

    <string name="student">受講生</string>
    <string name="teacher">講師</string>

    <string name="record">記録</string>

    <string name="student_count_1">%d 人</string>
    <string name="edit">編集</string>
    <string name="description">説明</string>
    <string name="deadline">期限</string>
    <string name="status">ステータス</string>
    <string name="your_answer">あなたのこたえ</string>
    <string name="submission_file">提出ファイル</string>
    <string name="file">ファイル</string>
    <string name="material">資料</string>
    <string name="comment_from_teacher">先生からのコメント</string>

    <string name="take_with_camera">カメラで撮影</string>
    <string name="add_from_library">ライブラリから追加</string>
    <string name="reply">回答</string>
    <string name="answer">こたえをかく</string>

    <string name="save_draft">下書き保存</string>
    <string name="put_forward">追加提出</string>

    <string name="present_situation">提出状況</string>
    <string name="content">内容</string>

    <string name="id_password">ID / パスワード</string>
    <string name="tag">タグ</string>
    <string name="information">情報</string>
    <string name="id_password_value">%s / %s</string>

    <string name="input_least_1">１文字以上入力してください</string>
    <string name="change_password">パスワードを変更しましょう</string>
    <string name="change_password_desc">パスワードは、推測されやすいものや他のサービスで利用しているものにしないようにご注意ください</string>
    <string name="old_password">いまのパスワード</string>
    <string name="new_password">新しいパスワード</string>
    <string name="confirm">確認</string>
    <string name="change">変更</string>

    <string name="new_pass_not_equal_new_pass_1">新しいパスワードと確認用パスワードが一致しません。</string>
    <string name="new_pass_least_8">パスワードは8文字以上にしてください</string>
    <string name="old_pass_equal_new_pass">変更前と同じパスワードは設定できません</string>
    <string name="new_pass_need_letter">パスワードにアルファベットを含めてください</string>
    <string name="new_pass_need_number">パスワードに数字を含めてください</string>
    <string name="pass_not_match">パスワードが一致しません</string>
    <string name="password_changed">パスワードを変更しました</string>

    <string name="term_use_pp">利用規約とプライバシーポリシー</string>
    <string name="term_use_pp_desc">サービスのご利用には、利用規約とプライバシーポリシーへの同意が必要です。下記のリンクをそれぞれご一読いただき、「同意する」を押してください。</string>
    <string name="agree">同意する</string>

    <string name="course_name">コース名</string>
    <string name="end_date">終了日</string>
    <string name="auto_create_workout_end">レッスン終了時に自動でワークアウトを作成</string>

    <string name="create_lesson">レッスンの作成</string>
    <string name="lesson_name">レッスン名</string>
    <string name="lesson_name_in_30_char">タイトル30文字以内</string>
    <string name="date_and_time">日時</string>
    <string name="repetition">繰り返し</string>
    <string name="record_lesson">レッスンを録画する</string>
    <string name="comment">コメント</string>
    <string name="create">作成</string>
    <string name="lesson_date_range">%s - %s</string>


    <string name="select_time">時間を選択</string>
    <string name="value_time">%02d:%02d</string>

    <string name="create_workout">ワークアウトの設定</string>
    <string name="title">タイトル</string>
    <string name="submission_deadline">提出期限</string>
    <string name="select_file">ファイルを選択</string>

    <string name="please_wait">お待ちください</string>
    <string name="url_null_empty">URLがnullまたは空です</string>

    <string name="delete">削除</string>
    <string name="add_teacher">先生の追加</string>
    <string name="assistant">アシスタント</string>
    <string name="frequency">頻度</string>
    <string name="search_by_name_or_tag">名前またはタグで検索できます</string>
    <string name="date">日付</string>
    <string name="start_time">開始時刻</string>
    <string name="end_time">終了時刻</string>

    <string name="cut_camera">カメラエリアを録画から切り取る</string>
    <string name="each_day">日ごと</string>
    <string name="weekly">週間ごと</string>
    <string name="exit_condition">終了条件</string>
    <string name="until">まで</string>
    <string name="repeat_time">回繰り返す</string>
    <string name="day_of_week">曜日</string>

    <string name="sun_day">日</string>
    <string name="mon_day">月</string>
    <string name="tue_day">火</string>
    <string name="wed_day">水</string>
    <string name="thu_day">木</string>
    <string name="fri_day">金</string>
    <string name="sat_day">土</string>


    <string name="add_student">受講生追加</string>
    <string name="addition_of_student">受講生の追加</string>
    <string name="addition">追加</string>
    <string name="added">追加しました</string>
    <string name="student_selection">受講生の選択</string>
    <string name="delete_student">受講生の削除</string>
    <string name="delete_student_msg">%sを削除します。このコースのすべてのレッスンが受講できなくなります。よろしいですか？</string>

    <string name="none">なし</string>
    <string name="course_setting">コースの設定</string>
    <string name="picture">ピクチャ</string>
    <string name="change_course">変更する</string>
    <string name="add_tag">タグの追加</string>
    <string name="course_updated">更新しました</string>
    <string name="put_end_date_after_today">終了日は翌日以降に設定できます</string>
    <string name="course_error_date">「%s」は現在時刻から%s日間以上ではありません</string>
    <string name="error_occurred">エラーが発生しました</string>
    <string name="error_occurred_not_register">エラーが発生しました登録できませんでし \n %s</string>
    <string name="could_not_update_due_to_ongoing_lesson">実施中のレッスンがあるため、コースの設定を更新できませんでした</string>
    <string name="could_not_update_due_to_completed_course">終了しているコースのため、設定を更新できませんでした</string>

    <string name="title_required">タイトルは必須です</string>
    <string name="teacher_required">講師は必須です</string>
    <string name="start_time_after_5_from_current">開始時間は現在時刻よりも５分後以降に設定してください</string>
    <string name="class_time_15_or_more">授業時間は15分以上に設定してください</string>
    <string name="condition_required">終了条件は必須です</string>
    <string name="frequency_required">頻度は必須です</string>
    <string name="day_of_week_required">曜日は必須です</string>
    <string name="created">作成しました</string>

    <string name="do_you_want_delete_all_lesson">すべての繰り返しレッスンを 削除しますか？</string>
    <string name="do_you_want_delete_all_lesson_msg">繰り返しが設定されているレッスンです。\nこのレッスンのみを削除しますか？すべてのレッスンを削除しますか？</string>
    <string name="delete_all">すべて削除</string>
    <string name="delete_this_lesson">このレッスンのみ削除</string>
    <string name="do_you_want_delete_lesson">本当に削除しますか?</string>
    <string name="do_you_want_delete_lesson_msg">この操作は取り消せません。よろしいですか？</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="deleted">削除しました</string>
    <string name="edit_repeat_lesson_once">繰り返しレッスンを一括で編集</string>

    <string name="time_is_not_feature">「%s」は未来ではありません。</string>

    <string name="do_you_want_delete_workout">本当に削除しますか?</string>
    <string name="do_you_want_delete_workout_msg">このワークアウトを削除すると、受講生が提出した内容もすべて削除されます。この操作は取り消せません。本当によろしいですか？</string>

    <string name="submit_submission_title">追加提出します。よろしいですか？</string>

    <string name="view">みる</string>
    <string name="please_confirm">確認してください</string>
    <string name="next_student">次の生徒</string>
    <string name="prev_student">前の生徒</string>
    <string name="good_job">よくできました</string>
    <string name="confirmed">確認しました</string>
    <string name="check_again">もう一度確認してみよう</string>
    <string name="to_comment">コメントする</string>
    <string name="enter_comment">コメントを入力</string>
    <string name="resubmit">再提出させる</string>
    <string name="send_review">レビューを送信</string>
    <string name="i_reviewed">レビューしました</string>
    <string name="verification">確認</string>

    <string name="your_record_in_course">このコースでのあなたの記録</string>
    <string name="reach_goal">目標達成！</string>
    <string name="goal">目標 %d</string>
    <string name="percent">%d%%</string>
    <string name="trophy_won">獲得したトロフィー</string>
    <string name="number_remark">発言回数</string>
    <string name="number_hand_raise">挙手回数</string>

    <string name="during_class">授業中</string>
    <string name="see_more">もっとみる</string>


</resources>