<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="@dimen/item_margin_edge"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="@color/color_background"
        app:icon="@drawable/ic_left"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/color_text_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/color_text_second"
        app:strokeWidth="1dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginEnd="@dimen/item_margin_edge"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/term_use_pp"
            android:textColor="@color/color_text_primary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/term_use_pp_desc"
            android:textColor="@color/color_text_primary"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/term"
            android:textColor="@color/color_primary_variant"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/policy"
            android:textColor="@color/color_primary_variant"
            android:textSize="15sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="13dp"
            android:text="@string/agree"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.Button.SmallComponent" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>