<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="@dimen/item_margin_edge"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="@color/color_background"
        app:icon="@drawable/ic_left"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/color_text_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/color_text_second"
        app:strokeWidth="1dp" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:background="@color/color_background"
        app:layout_constraintBottom_toTopOf="@+id/change"
        app:layout_constraintTop_toBottomOf="@+id/back">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/item_margin_edge"
            android:paddingEnd="@dimen/item_margin_edge">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/color_text_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/change_password_desc"
                android:textColor="@color/color_primary_variant"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/old_pw_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/old_password"
                android:textColor="@color/color_text_primary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/old_pw_field"
                style="@style/ChangePasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/old_pw_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/color_text_primary"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/new_pw_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_password"
                android:textColor="@color/color_text_primary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_pw_field"
                style="@style/ChangePasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_pw_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/color_text_primary"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/new_pw_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm"
                android:textColor="@color/color_text_primary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_pw_field_1"
                style="@style/ChangePasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_pw_edit_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/color_text_primary"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/show_password"
                android:textColor="@color/color_text_primary"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/login_error"
                android:textColor="@color/color_error"
                android:textSize="14sp"
                android:visibility="invisible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="@dimen/item_margin_edge"
        android:layout_marginBottom="32dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="13dp"
        android:text="@string/change"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Button.SmallComponent" />


</androidx.constraintlayout.widget.ConstraintLayout>


