<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="15dp"
        android:text="@string/course"
        android:textColor="@color/color_text_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="2dp"
        android:textColor="@color/color_text_primary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="@dimen/item_margin_edge"
        android:background="@color/setting_divider"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/teacher1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="15dp"
        android:text="@string/teacher"
        android:textColor="@color/color_text_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="2dp"
        android:textColor="@color/color_primary_variant"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher1" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="@dimen/item_margin_edge"
        android:background="@color/setting_divider"
        app:layout_constraintTop_toBottomOf="@+id/teacher_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="15dp"
        android:text="@string/student"
        android:textColor="@color/color_text_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="2dp"
        android:textColor="@color/color_text_primary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/item_margin_edge"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="@dimen/item_margin_edge"
        android:background="@color/setting_divider"
        app:layout_constraintTop_toBottomOf="@+id/teacher_name" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/on_primary"
        android:visibility="gone"
        app:backgroundTint="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>